Starting to wrangle the Videos panel.

--- a/hero.html
+++ b/hero.html
@@ -14,6 +14,8 @@
 <body>
 	<section id="hero">
 		<section id="strip">
+			
+
 
 			<!--****************PHOTOS************-->
 			<section class="feature" id="photos">
@@ -513,7 +515,18 @@
 				</section>
 			</section>
 
-
+			<!--****************VIDEOS************-->
+			<section class="feature" id="videos">
+				<section class="feature-content">
+					<article class="feature-article">
+						<section class="article-content">
+							<p>
+								<iframe class="mainVid" src="http://www.youtube.com/embed/ZVUyyHYkBHk" frameborder="0" allowfullscreen></iframe>
+							</p>
+						</section>
+					</article>
+				</section>
+			</section>
 
 			<!--****************BLOGS************-->
 			<section class="feature" id="blogs">
@@ -529,19 +542,7 @@
 				</section>
 			</section>
 
-			<!--****************VIDEOS************-->
-			<section class="feature" id="videos">
-				<section class="feature-content">
-					<article class="feature-article">
-						<header class="article-title">
-							videos
-						</header>
-						<section class="article-content">
-							<p>The film begins with two high school sweethearts, Lawrence (played by Luke Roberston) and Caroline (played by Laura Breckenridge). They are about to go off to college, but claim they will stay together nonetheless. The film then jumps forward 25 years, and Lawrence (played by Frank Wood) is living back in his hometown, Bayonne, New Jersey, and is a photographer who photographs pets, as well as criminals at the local police station. He receives a surprise phone call from Caroline (played by Paige Turco), who has recently come back home in order to care for her sick father and who is divorced and has a troubled teenage son Johnny (played by Ryan Donowho). Caroline and Lawrence go on a date and rekindle their relationship, but shortly afterwards she dies in a freak accident. Johnny's father Harris (played by Aldo Perez) does not want to take care of him, and he will be going into foster care. When Johnny has a seizure at his mother's funeral, Lawrence decides to adopt him. The bulk of the film is about Lawrence and Johnny, and how Lawrence tries to be a father to Johnny while Johnny rejects him. Johnny also has a relationship with a neighborhood girl, Mariana (played by Isidra Vega), and problems with the local drug dealer Carter (played by Jesse Kelly).</p>
-						</section>
-					</article>
-				</section>
-			</section>	
+
 
 
 
@@ -550,20 +551,24 @@
 		<!--***********MAIN NAV*********-->
 		<nav id="features">
 			<ul>
-				<li class="opened" id="photos">
+
+				
+				<li id="photos" class="opened">
 					<span class="feature-nav">Photos</span>
 				</li>
 
 				<li id="stories">
 					<span class="feature-nav">Stories</span>
 				</li>
+				
+				<li id="videos">
+					<span class="feature-nav">Videos</span>
+				</li>
 
 				<li id="blogs">
 					<span class="feature-nav">Blogs</span>
 				</li>
-				<li id="videos">
-					<span class="feature-nav">Videos</span>
-				</li>
+
 
 			</ul>
 		</nav>	
