--- a/hero.html
+++ b/hero.html
@@ -521,10 +521,15 @@
 					<article class="feature-article">
 						<section class="article-content">
 							<p>
-								<iframe class="mainVid" src="http://www.youtube.com/embed/ZVUyyHYkBHk" frameborder="0" allowfullscreen></iframe>
+								<iframe class="featureVideo" src="http://www.youtube.com/embed/ZVUyyHYkBHk" frameborder="0" allowfullscreen></iframe>
 							</p>
+							
+
 						</section>
 					</article>
+					<div class="side">
+						hi
+					</div>
 				</section>
 			</section>
 
