Styled the videos panel. Need to decide if I want to add red outlines when you hover over the various videos.

--- a/hero.html
+++ b/hero.html
@@ -528,7 +528,45 @@
 						</section>
 					</article>
 					<div class="side">
-						hi
+						<div class="side-content">
+							<header class="video-header">I bet you thought you were da bes. Minus now.</header>
+							<p class="video-youtube-tiein"><a href="http://www.youtube.com/watch?v=ZVUyyHYkBHk">Watch video on <img class="youtube-logo" src="media/video/youtube_logo.gif"></a></p>
+							<div class="video-thumbs">
+								<ul>
+									<li>
+										<figure>
+											<img src="media/video/twilight.png">
+										</figure>
+									</li>
+									<li>
+										<figure>
+											<img src="media/video/pinkie.png">
+										</figure>
+									</li>
+									<li>
+										<figure>
+											<img src="media/video/rarity.jpeg">
+										</figure>
+									</li>
+									<li>
+										<figure>
+											<img src="media/video/rainbow.png">
+										</figure>
+									</li>
+									<li>
+										<figure>
+											<img src="media/video/fluttershy.png">
+										</figure>
+									</li>
+									<li>
+										<figure>
+											<img src="media/video/applejack.jpeg">
+										</figure>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<a href="http://www.youtube.com/user/OberlinCollege"><p class="view-obie-vids">View all Oberlin videos on YouTube &#x25B8;</p></a>
 					</div>
 				</section>
 			</section>
