--- a/hero.html
+++ b/hero.html
@@ -534,34 +534,46 @@
 							<div class="video-thumbs">
 								<ul>
 									<li>
-										<figure>
-											<img src="media/video/twilight.png">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=K5tVbVu9Mkg">
+											<figure>
+												<img src="media/video/twilight.png">
+											</figure>
+										</a>
 									</li>
 									<li>
-										<figure>
-											<img src="media/video/pinkie.png">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=dQw4w9WgXcQ">
+											<figure>
+												<img src="media/video/pinkie.png">
+											</figure>
+										</a>
 									</li>
 									<li>
-										<figure>
-											<img src="media/video/rarity.jpeg">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=K5tVbVu9Mkg">
+											<figure>
+												<img src="media/video/rarity.jpeg">
+											</figure>
+										</a>
 									</li>
 									<li>
-										<figure>
-											<img src="media/video/rainbow.png">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=K5tVbVu9Mkg">
+											<figure>
+												<img src="media/video/rainbow.png">
+											</figure>
+										</a>
 									</li>
 									<li>
-										<figure>
-											<img src="media/video/fluttershy.png">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=K5tVbVu9Mkg">
+											<figure>
+												<img src="media/video/fluttershy.png">
+											</figure>
+										</a>
 									</li>
 									<li>
-										<figure>
-											<img src="media/video/applejack.jpeg">
-										</figure>
+										<a href="http://www.youtube.com/watch?v=K5tVbVu9Mkg">
+											<figure>
+												<img src="media/video/applejack.jpeg">
+											</figure>
+										</a>
 									</li>
 								</ul>
 							</div>
