Styling on the Blogs panel.

--- a/hero.html
+++ b/hero.html
@@ -587,11 +587,60 @@
 			<section class="feature" id="blogs">
 				<section class="feature-content">
 					<article class="feature-article">
-						<header class="article-title">
-							blogs
-						</header>
 						<section class="article-content">
-							<p>Paris–Brussels was first run on 12 August 1893 as an amateur event over a distance of 397 km, Belgian Andre Henry took the inaugural victory from compatriot Charles Delbecque with France's Fernand Augenault coming in third. The race did not return to the racing calendar until 1906 when it was run as a two day event on the 3rd and 4 June. The first stage of this 1906 event was run from the Paris suburb of Villiers-sur-Marne to Reims over 152 km and was won by France's Maurice Bardonneau. Albert Dupont took the more challenging second stage on the following day from Reims to Brussels over 239 km to take the overall race victory from compatriots Jules Patou and Guillaume Coeckelberg. The following year the race reverted to being a one day race and quickly established itself as one of the Spring Classics with a date towards the end of April, between Paris–Roubaix and Gent–Wevelgem. The event lost its prestige during the 1960s when the race was beset by traffic problems between the two capitals and the Dutch promoted Amstel Gold Race took its place on the classics calendar. The race was not run between 1967 and 1972.</p>
+							<div class="primary">
+								<header class="blog-entry-title">
+									My First Blog Post Lol
+								</header>
+								<header class="blog-entry-data">
+									Yugi Moto '15 | March 18, 2012
+								</header>
+
+								<div class="blog-preview">
+									<figure>
+										<img src="media/blogs/yugi.jpeg">
+									</figure>
+									<p>
+									Croissant sugar plum caramels pastry candy marzipan cake bonbon. Marshmallow bear claw chocolate bar biscuit oat cake cheesecake muffin dragée. Macaroon toffee wypas pastry lollipop gummi bears. Pie croissant jelly muffin. Soufflé oat cake apple pie jujubes wafer tart gummies icing icing. Faworki liquorice chocolate cake chocolate tiramisu bear claw. Ice cream bonbon ice cream dragée. Bear claw halvah candy.
+									</p>
+								</div>								
+							</div>
+							<div class="secondary">
+								<header class="blog-entry-title">
+									Bringing Sexy Back: A Memoir
+								</header>
+								<header class="blog-entry-data">
+									Duke Devlin '10 | May 15, 2012
+								</header>
+
+								<div class="blog-preview">
+									<figure>
+										<img src="media/blogs/duke.png">
+									</figure>
+									<p>
+									Cheesecake ice cream cupcake icing oat cake gummies chocolate cake. Carrot cake applicake croissant candy macaroon macaroon. Cookie gummies sweet tootsie roll chupa chups. Pudding applicake chupa chups jelly beans tiramisu pudding.
+									</p>
+								</div>
+								
+								<header class="blog-entry-title">
+									Why Friendship is Amazing
+								</header>
+								<header class="blog-entry-data">
+									Tea Gardner '12 | Jan 22, 2012
+								</header>
+
+								<div class="blog-preview">
+									<figure>
+										<img src="media/blogs/tea.gif">
+									</figure>
+									<p>
+									Cheesecake halvah sugar plum jelly beans gingerbread biscuit gummies. Icing oat cake powder wypas oat cake chupa chups cookie. Chocolate faworki dragée soufflé lollipop ice cream sweet roll tiramisu. Croissant cupcake chocolate bar toffee apple pie sweet cake tiramisu sugar plum.
+									</p>
+								</div>
+								
+							</div>
+							<div class="tertiary">
+							</div>
 						</section>
 					</article>
 				</section>
