All basic styling done in the 'blogs' panel.

--- a/hero.html
+++ b/hero.html
@@ -637,9 +637,56 @@
 									Cheesecake halvah sugar plum jelly beans gingerbread biscuit gummies. Icing oat cake powder wypas oat cake chupa chups cookie. Chocolate faworki dragée soufflé lollipop ice cream sweet roll tiramisu. Croissant cupcake chocolate bar toffee apple pie sweet cake tiramisu sugar plum.
 									</p>
 								</div>
-								
 							</div>
 							<div class="tertiary">
+								<div class="blog-head">
+									<figure>
+										<img src="media/blogs/joey.jpeg">
+									</figure>
+									<header class="blog-entry-title">
+										Brooklyn Rage!
+									</header>
+									<header class="blog-entry-data">
+										Joey Wheeler '14 | November 19, 2011
+									</header>
+								</div>
+								<div class="blog-head">
+									<figure>
+										<img src="media/blogs/duke.png">
+									</figure>
+									<header class="blog-entry-title">
+										This is Why I'm Hot
+									</header>
+									<header class="blog-entry-data">
+										Duke Devlin '10 | October 7, 2011
+									</header>
+								</div>
+								<div class="blog-head">
+									<figure>
+										<img src="media/blogs/tea.gif">
+									</figure>
+									<header class="blog-entry-title">
+										Why Duke Should Date Me
+									</header>
+									<header class="blog-entry-data">
+										Tea Gardner '12 | September 6, 2011
+									</header>
+								</div>
+								<div class="blog-head">
+									<figure>
+										<img src="media/blogs/yugi.jpeg">
+									</figure>
+									<header class="blog-entry-title">
+										Baby Panda Mode, Activate!
+									</header>
+									<header class="blog-entry-data">
+										Yugi Moto '15 | August 25, 2011
+									</header>
+								</div>
+								
+								<div class="blogs-linky">
+									<p>View all Oberlin Blogs &#x25B8;</p>
+								</div>
 							</div>
 						</section>
 					</article>
