More styling. Can't always get the box-shadows to render correctly...

--- a/hero.html
+++ b/hero.html
@@ -593,7 +593,7 @@
 									My First Blog Post Lol
 								</header>
 								<header class="blog-entry-data">
-									Yugi Moto '15 | March 18, 2012
+									<span class="author">Yugi Moto '15 | </span> March 18, 2012
 								</header>
 
 								<div class="blog-preview">
@@ -610,7 +610,7 @@
 									Bringing Sexy Back: A Memoir
 								</header>
 								<header class="blog-entry-data">
-									Duke Devlin '10 | May 15, 2012
+									<span class="author">Duke Devlin '10 | </span>May 15, 2012
 								</header>
 
 								<div class="blog-preview">
@@ -626,7 +626,7 @@
 									Why Friendship is Amazing
 								</header>
 								<header class="blog-entry-data">
-									Tea Gardner '12 | Jan 22, 2012
+									<span class="author">Tea Gardner '12 | </span>Jan 22, 2012
 								</header>
 
 								<div class="blog-preview">
@@ -647,7 +647,7 @@
 										Brooklyn Rage!
 									</header>
 									<header class="blog-entry-data">
-										Joey Wheeler '14 | November 19, 2011
+										<span class="author">Joey Wheeler '14 | </span>November 19, 2011
 									</header>
 								</div>
 								<div class="blog-head">
@@ -658,7 +658,7 @@
 										This is Why I'm Hot
 									</header>
 									<header class="blog-entry-data">
-										Duke Devlin '10 | October 7, 2011
+										<span class="author">Duke Devlin '10 | </span>October 7, 2011
 									</header>
 								</div>
 								<div class="blog-head">
@@ -669,7 +669,7 @@
 										Why Duke Should Date Me
 									</header>
 									<header class="blog-entry-data">
-										Tea Gardner '12 | September 6, 2011
+										<span class="author">Tea Gardner '12 | </span>September 6, 2011
 									</header>
 								</div>
 								<div class="blog-head">
@@ -680,7 +680,7 @@
 										Baby Panda Mode, Activate!
 									</header>
 									<header class="blog-entry-data">
-										Yugi Moto '15 | August 25, 2011
+										<span class="author">Yugi Moto '15 | </span>August 25, 2011
 									</header>
 								</div>
 								
