Font styles; links.

--- a/hero.html
+++ b/hero.html
@@ -589,12 +589,14 @@
 					<article class="feature-article">
 						<section class="article-content">
 							<div class="primary">
-								<header class="blog-entry-title">
-									My First Blog Post Lol
-								</header>
-								<header class="blog-entry-data">
-									<span class="author">Yugi Moto '15 | </span> March 18, 2012
-								</header>
+								<a href="#">
+									<header class="blog-entry-title">
+										My First Blog Post Lol
+									</header>
+									<header class="blog-entry-data">
+										<span class="author">Yugi Moto '15 | </span> March 18, 2012
+									</header>
+								</a>
 
 								<div class="blog-preview">
 									<figure>
@@ -606,12 +608,14 @@
 								</div>								
 							</div>
 							<div class="secondary">
-								<header class="blog-entry-title">
-									Bringing Sexy Back: A Memoir
-								</header>
-								<header class="blog-entry-data">
-									<span class="author">Duke Devlin '10 | </span>May 15, 2012
-								</header>
+								<a href="#">
+									<header class="blog-entry-title">
+										Bringing Sexy Back: A Memoir
+									</header>
+									<header class="blog-entry-data">
+										<span class="author">Duke Devlin '10 | </span>May 15, 2012
+									</header>
+								</a>
 
 								<div class="blog-preview">
 									<figure>
@@ -622,12 +626,14 @@
 									</p>
 								</div>
 								
-								<header class="blog-entry-title">
-									Why Friendship is Amazing
-								</header>
-								<header class="blog-entry-data">
-									<span class="author">Tea Gardner '12 | </span>Jan 22, 2012
-								</header>
+								<a href="#">
+									<header class="blog-entry-title">
+										Why Friendship is Amazing
+									</header>
+									<header class="blog-entry-data">
+										<span class="author">Tea Gardner '12 | </span>Jan 22, 2012
+									</header>
+								</a>
 
 								<div class="blog-preview">
 									<figure>
@@ -639,54 +645,63 @@
 								</div>
 							</div>
 							<div class="tertiary">
-								<div class="blog-head">
-									<figure>
-										<img src="media/blogs/joey.jpeg">
-									</figure>
-									<header class="blog-entry-title">
-										Brooklyn Rage!
-									</header>
-									<header class="blog-entry-data">
-										<span class="author">Joey Wheeler '14 | </span>November 19, 2011
-									</header>
-								</div>
-								<div class="blog-head">
-									<figure>
-										<img src="media/blogs/duke.png">
-									</figure>
-									<header class="blog-entry-title">
-										This is Why I'm Hot
-									</header>
-									<header class="blog-entry-data">
-										<span class="author">Duke Devlin '10 | </span>October 7, 2011
-									</header>
-								</div>
-								<div class="blog-head">
-									<figure>
-										<img src="media/blogs/tea.gif">
-									</figure>
-									<header class="blog-entry-title">
-										Why Duke Should Date Me
-									</header>
-									<header class="blog-entry-data">
-										<span class="author">Tea Gardner '12 | </span>September 6, 2011
-									</header>
-								</div>
-								<div class="blog-head">
-									<figure>
-										<img src="media/blogs/yugi.jpeg">
-									</figure>
-									<header class="blog-entry-title">
-										Baby Panda Mode, Activate!
-									</header>
-									<header class="blog-entry-data">
-										<span class="author">Yugi Moto '15 | </span>August 25, 2011
-									</header>
-								</div>
-								
-								<div class="blogs-linky">
-									<p>View all Oberlin Blogs &#x25B8;</p>
-								</div>
+								<a href="#">
+									<div class="blog-head">						
+										<figure>
+											<img src="media/blogs/joey.jpeg">
+										</figure>
+										<header class="blog-entry-title">
+											Brooklyn Rage!
+										</header>
+										<header class="blog-entry-data">
+											<span class="author">Joey Wheeler '14 | </span>November 19, 2011
+										</header>
+									</div>
+								</a>
+								<a href="#">
+									<div class="blog-head">
+										<figure>
+											<img src="media/blogs/duke.png">
+										</figure>
+										<header class="blog-entry-title">
+											This is Why I'm Hot
+										</header>
+										<header class="blog-entry-data">
+											<span class="author">Duke Devlin '10 | </span>October 7, 2011
+										</header>
+									</div>
+								</a>
+								<a href="#">
+									<div class="blog-head">
+										<figure>
+											<img src="media/blogs/tea.gif">
+										</figure>
+										<header class="blog-entry-title">
+											Why Duke Should Date Me
+										</header>
+										<header class="blog-entry-data">
+											<span class="author">Tea Gardner '12 | </span>September 6, 2011
+										</header>
+									</div>
+								</a>
+								<a href="#">
+									<div class="blog-head">
+										<figure>
+											<img src="media/blogs/yugi.jpeg">
+										</figure>
+										<header class="blog-entry-title">
+											Baby Panda Mode, Activate!
+										</header>
+										<header class="blog-entry-data">
+											<span class="author">Yugi Moto '15 | </span>August 25, 2011
+										</header>
+									</div>
+								</a>
+								<a href="#">
+									<div class="blogs-linky">
+										<p>View all Oberlin Blogs &#x25B8;</p>
+									</div>
+								</a>
 							</div>
 						</section>
 					</article>
